<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    tools:context=".EditListingActivity"
    tools:ignore="Autofill,LabelFor,HardcodedText,ContentDescription">


    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="36dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="126dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="188dp"
        android:gravity="center"
        android:text="Title"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="120dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:includeFontPadding="true"
        android:inputType="textMultiLine|textPersonName"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_text_view" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="126dp"
        android:layout_height="44dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="Price"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="Description"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_text_view" />

    <EditText
        android:id="@+id/price_edit_text"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:background="#1AFFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="$19.99"
        android:inputType="numberDecimal"
        android:textColor="@android:color/white"
        android:textColorHint="#80FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/price_text_view"
        app:layout_constraintTop_toBottomOf="@+id/title_edit_text" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:onClick="onClick"
        android:text="Create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/description_edit_text" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="24dp"
        android:onClick="onClick"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/create_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_edit_text" />

    <ImageView
        android:id="@+id/product_image_view"
        android:layout_width="116dp"
        android:layout_height="89dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/alert_light_frame" />

    <Button
        android:id="@+id/upload_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="52dp"
        android:text="Upload Photo"
        app:layout_constraintStart_toEndOf="@+id/product_image_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/upload_text_view"
        android:layout_width="120dp"
        android:layout_height="31dp"
        android:layout_marginStart="80dp"
        android:textColor="#009688"
        app:layout_constraintStart_toEndOf="@+id/product_image_view"
        app:layout_constraintTop_toBottomOf="@+id/upload_photo_button" />

</androidx.constraintlayout.widget.ConstraintLayout>