<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="25dp"
    android:padding="5dip">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/bTitle"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:color/transparent"
            android:gravity="start"
            android:maxWidth="150dp"
            android:onClick="onClick"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:width="150dp"
            android:maxWidth="200dp"
            android:minWidth="150dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/detail_price"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_column="3"
            android:width="75dp"
            android:maxWidth="50dp"
            android:textColor="#FFFFFF" />

    </TableRow>

</TableLayout>
