...
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintVertical_bias="0.526" />

    <ImageButton
        android:id="@+id/create_listing"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="#00FFFFFF"
        android:onClick="onClick"
...
